simplify scss setup: easier upgrading of appuniversum in the future

--- a/app/components/document-attachments.hbs
+++ b/app/components/document-attachments.hbs
@@ -1,4 +1,4 @@
-<div class="au-o-box au-o-box--small au-c-theme-gray-200">
+<div class="au-o-box au-o-box--small au-u-background-gray-200">
   <AuFileUpload @title={{t "attachments.attach" }} @helpTextDragDrop={{t "attachments.drag" }} @modelName={{"file"}}
     @endPoint={{"/files"}} @onFinishUpload={{perform this.uploadedAttachement}} @maxFileSizeMB="1024"
     @multiple={{true}} />
