--- a/app/components/print-view/print-header.hbs
+++ b/app/components/print-view/print-header.hbs
@@ -1,4 +1,4 @@
-<section class="au-o-box u-background--gray-lighter u-hide-on-print u-hide-on-print--show">
+<section class="au-o-box au-u-background-gray-100 au-u-hide-on-print au-u-hide-on-print--show">
   <div class="au-o-grid">
     <div class="au-o-grid__item au-u-3-4@medium au-u-1-2@large">
       <AuContent>
