--- a/app/templates/agendapoints/show.hbs
+++ b/app/templates/agendapoints/show.hbs
@@ -11,7 +11,7 @@
     <div class="say-container say-container--sidebar-left">
       <div class="say-container__main">
         {{#unless this.readOnly}}
-          <div class="au-o-box au-o-box--small au-c-theme-gray-100">
+          <div class="au-o-box au-o-box--small au-u-background-gray-100">
             <AuAlert @alertIcon="info-circle" @alertTitle="Niet editeerbaar"  @alertSkin="info" @alertSize="small" class="au-u-margin-bottom-none">
               <p>Dit artikel is reeds gepubliceerd. Gepubliceerde agendapunten zijn niet editeerbaar.</p>
             </AuAlert>
