make the template required when creating an agendapoint

--- a/app/components/document-creator.hbs
+++ b/app/components/document-creator.hbs
@@ -14,6 +14,7 @@
     "document-creator/form"
     title=this.title
     invalidTitle=this.invalidTitle
+    invalidTemplate=this.invalidTemplate
     updateTitle=this.updateTitle
     selectedTemplate=this.template
     options=this.templateOptions
