--- a/app/components/document-creator/form.hbs
+++ b/app/components/document-creator/form.hbs
@@ -10,11 +10,11 @@
   </div>
   <div>
     {{#let (unique-id) as |id|}}
-      <AuLabel for={{id}}>
+      <AuLabel @error={{@invalidTemplate}} for={{id}}>
         {{t "documentCreator.template"}}
       </AuLabel>
       <PowerSelect
-
+        class={{if @invalidTemplate "u-c-input au-c-input--error"}}
         @options={{@options}}
         @selected={{@selectedTemplate}}
         @onChange={{@onSelectTemplate}}
