Generate a final preview for the notulen taking into account public behandelings

--- a/app/components/signatures/notulen/timeline-step.hbs
+++ b/app/components/signatures/notulen/timeline-step.hbs
@@ -6,6 +6,8 @@
     @errors={{@errors}}
     @signing={{@signing}}
     @publish={{@publish}}
+    @generatePreview={{@generatePreview}}
+    @preview={{@preview}}
     @mockDocument={{this.mockNotulen}}
     @isOpen={{true}}
   >
