--- a/app/templates/meetings/publish/notulen.hbs
+++ b/app/templates/meetings/publish/notulen.hbs
@@ -16,6 +16,8 @@
       @allBehandelingPublic={{this.allBehandelingPublic}}
       @signing={{perform this.createSignedResource}}
       @publish={{perform this.createPublishedResource}}
+      @generatePreview={{this.generateNotulenPreview}}
+      @preview={{this.preview}}
     />
   </ul>
   {{else}}
