--- a/app/components/signatures/signature-confirmation.hbs
+++ b/app/components/signatures/signature-confirmation.hbs
@@ -34,7 +34,11 @@
       <div class="au-o-grid__item au-u-2-3">
         <div class="au-c-rdfa-publication-holder">
           <div class="au-c-rdfa-publication say-content rdfa-annotations behandeling-preview">
-            {{html-safe @mockDocument.body}}
+            {{#if (has-block)}}
+              {{yield}}
+            {{else}}
+              {{html-safe @mockDocument.body}}
+            {{/if}}
           </div>
         </div>
       </div>
