fix alignment of datepicker dialogs in modal windows

--- a/app/components/date-time-picker.hbs
+++ b/app/components/date-time-picker.hbs
@@ -3,6 +3,7 @@
     {{#let (unique-id) as |id|}}
       <AuLabel for={{id}}>{{t "dateTimePicker.date"}}</AuLabel>
       <AuDatePicker
+        @alignment={{@alignment}}
         @id={{id}}
         @onChange={{this.onChangeDate}}
         @value={{this.date}}
