--- a/app/components/zitting/manage-zittingsdata.hbs
+++ b/app/components/zitting/manage-zittingsdata.hbs
@@ -50,7 +50,10 @@
         </div>
         <div>
           <AuLabel>{{t "manageZittingsData.geeindigdOpTijdstipLabel"}}</AuLabel>
-          <DateTimePicker @alignment="top" @onChange={{fn this.changeDate 'geeindigdOpTijdstip'}} @value={{this.geeindigdOpTijdstip}}/>
+          <DateTimePicker @alignment="top" @onChange={{this.changeEndDate}} @value={{this.geeindigdOpTijdstip}} />
+          {{#if this.dateError}}
+            <AuPill @skin="warning" @draft={{true}} @icon="info-circle">{{t "meetingForm.dateWarning"}}</AuPill>
+          {{/if}}
         </div>
       </div>
     </Modal.Body>
