--- a/app/templates/agendapoints/edit.hbs
+++ b/app/templates/agendapoints/edit.hbs
@@ -8,6 +8,8 @@
   @uploading={{this.uploading}}
   @toggleUpload={{this.toggleUpload}}
   @toggleUploadAndSave={{this.toggleUploadAndSave}}
+  @returnRoute="inbox.agendapoints"
+  @returnRouteText="Terug naar overzicht agendapunten"
 />
 
 {{#if this.hasDocumentValidationErrors}}
