--- a/app/templates/agendapoints/show.hbs
+++ b/app/templates/agendapoints/show.hbs
@@ -4,6 +4,8 @@
   @exportHtmlFunction={{this.download}}
   @readOnly={{true}}
   @copyAgendapunt={{if this.readOnly undefined (perform this.copyAgendapunt)}}
+  @returnRoute="inbox.agendapoints"
+  @returnRouteText="Terug naar overzicht agendapunten"
 />
 
 <div class="au-c-body-container">
