--- a/app/templates/irg-archive/show.hbs
+++ b/app/templates/irg-archive/show.hbs
@@ -4,6 +4,8 @@
   @documentContainer={{this.model.documentContainer}}
   @exportHtmlFunction={{this.download}}
   @readOnly={{true}}
+  @returnRoute="inbox.irg-archive"
+  @returnRouteText="Terug naar overzicht irg-archief"
 />
 
 <div class="au-c-body-container">
