fixed review issues

--- a/app/templates/agendapoints/edit.hbs
+++ b/app/templates/agendapoints/edit.hbs
@@ -9,7 +9,7 @@
   @toggleUpload={{this.toggleUpload}}
   @toggleUploadAndSave={{this.toggleUploadAndSave}}
   @returnRoute="inbox.agendapoints"
-  @returnRouteText="Terug naar overzicht agendapunten"
+  @returnRouteText={{t 'inbox.agendapoints.return'}}
 />
 
 {{#if this.hasDocumentValidationErrors}}
