--- a/app/templates/agendapoints/show.hbs
+++ b/app/templates/agendapoints/show.hbs
@@ -5,7 +5,7 @@
   @readOnly={{true}}
   @copyAgendapunt={{if this.readOnly undefined (perform this.copyAgendapunt)}}
   @returnRoute="inbox.agendapoints"
-  @returnRouteText="Terug naar overzicht agendapunten"
+  @returnRouteText={{t 'inbox.agendapoints.return'}}
 />
 
 <div class="au-c-body-container">
