--- a/app/templates/irg-archive/show.hbs
+++ b/app/templates/irg-archive/show.hbs
@@ -5,7 +5,7 @@
   @exportHtmlFunction={{this.download}}
   @readOnly={{true}}
   @returnRoute="inbox.irg-archive"
-  @returnRouteText="Terug naar overzicht irg-archief"
+  @returnRouteText={{t 'inbox.irgArchive.return'}}
 />
 
 <div class="au-c-body-container">
